# qoi

./: .gitignore  CMakeLists.txt
include/: qoi.h
src/: qoi.c  qoi.cpp  qoi_fast.c  qoi_fast_test.cpp  qoi_test.cpp
